<resources>
    <string name="a11y_call_duration_format">%1$d %2$s %3$d %4$s</string>
    <string name="a11y_call_duration_short_format">%1$d %2$s</string>
    <string name="a11y_call_incoming_answer_description">Answer</string>
    <string name="a11y_call_incoming_decline_description">Decline</string>
    <string name="a11y_description_incall_label_manage_content">Manage callers</string>
    <string name="a11y_description_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_description_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_description_incoming_call_reject_with_sms">Reject with message</string>
    <string name="a11y_glide_photo_manager_contact_photo_description">Quick contact for ^1</string>
    <string name="a11y_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_incoming_call_reject_with_sms">Reject this call with a message</string>
    <string name="a11y_incoming_call_swipe_gesture_prompt">Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="a11y_incoming_call_swipe_to_answer">Swipe up with two fingers to answer or down to reject the call</string>
    <string name="a11y_new_call_log_entry_full_description_with_phone_account_info">^1, ^2, ^3.</string>
    <string name="a11y_new_call_log_entry_full_description_without_phone_account_info">^1, ^2.</string>
    <string name="a11y_new_call_log_entry_phone_account">on ^1, via ^2</string>
    <string name="a11y_new_call_log_entry_tap_action">expand menu</string>
    <string name="a11y_new_call_log_entry_video_call">make a video call to ^1</string>
    <string name="a11y_new_call_log_entry_voice_call">call ^1</string>
    <string name="a11y_voicemail_entry_call">Call number</string>
    <string name="a11y_voicemail_entry_delete">Delete</string>
    <string name="a11y_voicemail_entry_expand_menu">Expand menu for this voicemail entry</string>
    <string name="a11y_voicemail_entry_pause">Pause</string>
    <string name="a11y_voicemail_entry_play">Play</string>
    <string name="a11y_voicemail_entry_speaker">Speaker</string>
    <string name="aac_format">AAC</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_phone_label">About</string>
    <string name="accessibility_settings_title">Accessibility</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="action_menu_call_history_description">Call history</string>
    <string name="action_menu_dialpad_button">key pad</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="addBlockedNumber">Add number</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="add_favorite_activity_title">Add Favorite</string>
    <string name="add_to_contacts">Add contact</string>
    <string name="add_wait">Add wait</string>
    <string name="all_contacts">All contacts</string>
    <string name="all_contacts_empty">You don\'t have any contacts yet</string>
    <string name="all_contacts_empty_add_contact_action">Create new contact</string>
    <string name="allow">Allow</string>
    <string name="alreadyBlocked">%1$s is already blocked.</string>
    <string name="always_warn">Show warning every time</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Phone</string>
    <string name="assisted_dialing_country_code_entry">Assisted dialing: Used country code +%1$s</string>
    <string name="assisted_dialing_country_code_entry_failure">Assisted dialing was used</string>
    <string name="assisted_dialing_setting_cc_category_title">Home country</string>
    <string name="assisted_dialing_setting_cc_default_summary">Automatically detected • %1$s</string>
    <string name="assisted_dialing_setting_cc_default_summary_fallback">Automatically detected</string>
    <string name="assisted_dialing_setting_cc_key">assisted_dialing_setting_cc_key</string>
    <string name="assisted_dialing_setting_cc_title">Default home country</string>
    <string name="auto_call_recording_key">auto_call_recording</string>
    <string name="auto_call_recording_title">Auto call recording</string>
    <string name="block_list">Blocked numbers</string>
    <string name="blocked_call_settings_import_button">Import</string>
    <string name="blocked_call_settings_import_description">You previously marked some callers to be automatically sent to voicemail via other apps.</string>
    <string name="blocked_call_settings_view_numbers_button">View Numbers</string>
    <string name="blocked_numbers_disabled_emergency_desc">Call blocking has been disabled because you contacted emergency services from this phone within the last 48 hours. It will be automatically reenabled once the 48 hour period expires.</string>
    <string name="blocked_numbers_disabled_emergency_header_label">Call blocking temporarily off</string>
    <string name="call_details_copy_number">Copy number</string>
    <string name="call_details_edit_number">Edit number before call</string>
    <string name="call_details_report_call_id">Report inaccurate number</string>
    <string name="call_log_trash_voicemail">Delete voicemail</string>
    <string name="call_recording_category_key">call_recording_category</string>
    <string name="call_recording_category_title">Call recording</string>
    <string name="call_recording_format">Audio format</string>
    <string name="call_recording_format_key">call_recording_format</string>
    <string name="change_greeting_text">Tap to Record</string>
    <string name="delete">Delete</string>
    <string name="description_clear_search">Clear search</string>
    <string name="description_playback_seek">Seek playback position</string>
    <string name="description_playback_speakerphone">Switch on or off speakerphone</string>
    <string name="dialer_hint_find_contact">Search contacts</string>
    <string name="dtmf_tone_enable_title">Keypad tones</string>
    <string name="dtmf_tone_length_preference_key">button_dtmf_settings</string>
    <string name="dtmf_tone_length_title">Keypad tone length</string>
    <string name="incall_category_key">dialer_general_incall_category_key</string>
    <string name="incall_category_title">In-call</string>
    <string name="incall_enable_dnd_title">Enable Do Not Disturb during calls</string>
    <string name="incall_label_add_call">Add call</string>
    <string name="incall_label_dialpad">Keypad</string>
    <string name="incall_label_hold">Hold</string>
    <string name="incall_label_mute">Mute</string>
    <string name="incall_label_speaker">Speaker</string>
    <string name="incall_label_videocall">Video call</string>
    <string name="incall_vibrate_45_key">incall_vibrate_45secs</string>
    <string name="incall_vibrate_45_summary">Vibrates at the 45 second mark of every minute during outgoing calls</string>
    <string name="incall_vibrate_45_title">Vibrate every minute</string>
    <string name="incall_vibrate_call_waiting_key">incall_vibrate_call_waiting</string>
    <string name="incall_vibrate_call_waiting_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_hangup_key">incall_vibrate_hangup</string>
    <string name="incall_vibrate_hangup_title">Vibrate on hang up</string>
    <string name="incall_vibrate_outgoing_key">incall_vibrate_outgoing</string>
    <string name="incall_vibrate_outgoing_title">Vibrate on answer</string>
    <string name="migrate_blocked_numbers_dialog_allow_button">Allow</string>
    <string name="migrate_blocked_numbers_dialog_message">To better protect you, Phone needs to change how blocking works. Your blocked numbers will now stop both calls and texts and may be shared with other apps.</string>
    <string name="migrate_blocked_numbers_dialog_title">New, simplified blocking</string>
    <string name="nearby_places_allow">Allow</string>
    <string name="nearby_places_dismiss">Dismiss</string>
    <string name="play_dtmf_preference_key">button_play_dtmf_tone</string>
    <string name="redo_button_text">Try Again</string>
    <string name="ringtone_preference_key">button_ringtone_key</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="save_button_text">Save</string>
    <string name="search_font_family">sans-serif</string>
    <string name="search_location_permission">To get contact information for places near you, allow access to your location.</string>
    <string name="vibrate_on_preference_key">button_vibrate_on_ring</string>
    <string name="vibrate_on_ring_title">Also vibrate for calls</string>
    <string name="voicemail_play_start_pause">Start or pause playback.</string>
</resources>