<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/incall_window_margin_horizontal" android:layout_marginEnd="@dimen/incall_window_margin_horizontal">
    <GridLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:columnCount="3">
        <com.android.incallui.incall.impl.CheckableLabeledButton android:enabled="false" android:gravity="center" android:id="@+id/incall_first_button" android:layout_width="0dp" android:layout_columnWeight="1" app:incall_labelText="@string/incall_label_mute"/>
        <com.android.incallui.incall.impl.CheckableLabeledButton android:enabled="false" android:gravity="center" android:id="@+id/incall_second_button" android:layout_width="0dp" android:layout_columnWeight="1" app:incall_labelText="@string/incall_label_dialpad"/>
        <com.android.incallui.incall.impl.CheckableLabeledButton android:enabled="false" android:gravity="center" android:id="@+id/incall_third_button" android:layout_width="0dp" android:layout_columnWeight="1" app:incall_labelText="@string/incall_label_speaker"/>
        <com.android.incallui.incall.impl.CheckableLabeledButton android:gravity="center" android:id="@+id/incall_fourth_button" android:layout_width="0dp" android:layout_marginTop="@dimen/incall_button_vertical_padding" android:layout_columnWeight="1" app:incall_labelText="@string/incall_label_add_call"/>
        <com.android.incallui.incall.impl.CheckableLabeledButton android:gravity="center" android:id="@+id/incall_fifth_button" android:layout_width="0dp" android:layout_marginTop="@dimen/incall_button_vertical_padding" android:layout_columnWeight="1" app:incall_labelText="@string/incall_label_hold"/>
        <com.android.incallui.incall.impl.CheckableLabeledButton android:gravity="center" android:id="@+id/incall_sixth_button" android:layout_width="0dp" android:layout_marginTop="@dimen/incall_button_vertical_padding" android:layout_columnWeight="1" app:incall_labelText="@string/incall_label_videocall"/>
    </GridLayout>
</FrameLayout>
