<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:focusable="false" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/blocked_numbers_disabled_for_emergency" android:background="?android:attr/colorBackground" android:paddingTop="27dp" android:paddingBottom="29dp" android:focusable="true" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/blocked_number_container_padding" android:paddingEnd="44dp">
        <TextView android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/blocked_numbers_disabled_emergency_header_label" style="@style/BlockedNumbersDescriptionTextStyle"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/blocked_numbers_disabled_emergency_desc" style="@style/BlockedNumbersDescriptionTextStyle"/>
    </LinearLayout>
    <android.support.p002v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardCornerRadius="0dp">
        <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?android:attr/textColorPrimary" android:gravity="center_vertical" android:id="@+id/blocked_number_text_view" android:layout_width="wrap_content" android:layout_height="48dp" android:text="@string/block_list" android:paddingStart="@dimen/blocked_number_container_padding" style="@style/TextAppearance.Material.Subhead"/>
            <RelativeLayout android:id="@+id/import_settings" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/blocked_number_settings_description_text_size" android:textColor="?attr/colorIcon" android:id="@+id/import_description" android:paddingTop="11dp" android:paddingBottom="27dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/blocked_call_settings_import_description" android:paddingStart="@dimen/blocked_number_container_padding" android:paddingEnd="@dimen/blocked_number_container_padding" style="@style/BlockedNumbersDescriptionTextStyle"/>
                <Button android:id="@+id/import_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blocked_call_settings_import_button" android:layout_below="@+id/import_description" android:layout_marginEnd="@dimen/blocked_number_container_padding" android:layout_alignParentEnd="true" style="@style/DialerFlatButtonStyle"/>
                <Button android:id="@+id/view_numbers_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blocked_call_settings_view_numbers_button" android:layout_below="@+id/import_description" android:layout_marginEnd="8dp" android:layout_toStartOf="@+id/import_button" style="@style/DialerFlatButtonStyle"/>
                <View android:background="@color/dialer_divider_line_color" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="8dp" android:layout_below="@+id/import_button"/>
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/migrate_promo" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="?android:attr/textColorPrimary" android:gravity="center_vertical" android:id="@+id/migrate_promo_header" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/migrate_blocked_numbers_dialog_title" android:paddingStart="@dimen/blocked_number_container_padding" android:paddingEnd="@dimen/blocked_number_container_padding" style="@style/TextAppearance.Material.Subhead"/>
                <TextView android:textColor="?attr/colorIcon" android:id="@+id/migrate_promo_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/blocked_number_container_padding" android:text="@string/migrate_blocked_numbers_dialog_message" android:layout_marginStart="@dimen/blocked_number_container_padding" android:layout_marginEnd="@dimen/blocked_number_container_padding"/>
                <Button android:layout_gravity="end" android:id="@+id/migrate_promo_allow_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/blocked_number_container_padding" android:text="@string/migrate_blocked_numbers_dialog_allow_button" android:layout_marginStart="@dimen/blocked_number_container_padding" android:layout_marginEnd="@dimen/blocked_number_container_padding" style="@style/DialerPrimaryFlatButtonStyle"/>
                <View style="@style/FullWidthDivider"/>
            </LinearLayout>
            <View android:id="@+id/blocked_number_list_divider" android:background="@color/dialer_divider_line_color" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginStart="72dp"/>
        </LinearLayout>
    </android.support.p002v7.widget.CardView>
</LinearLayout>
