<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/linearLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="120dp" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <com.android.dialer.voicemail.settings.RecordButton android:id="@+id/record_button" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:height="192dp" android:width="192dp"/>
        <TextView android:textAppearance="@style/Dialer.TextAppearance.Primary" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="40dp" android:text="@string/change_greeting_text" android:textAllCaps="true"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="?android:attr/buttonBarStyle">
        <Button android:id="@+id/save_button" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/save_button_text" android:layout_weight="1" style="?android:attr/buttonBarButtonStyle"/>
        <Button android:id="@+id/redo_button" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/redo_button_text" android:layout_weight="1" style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</RelativeLayout>
