<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/search_box_expanded" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="@dimen/expanded_search_bar_height">
    <ImageButton android:id="@+id/search_back_button" android:background="?attr/selectableItemBackgroundBorderless" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/quantum_ic_arrow_back_vd_theme_24" android:tint="?android:attr/colorPrimary" android:layout_centerVertical="true" android:contentDescription="@string/action_menu_back_from_search" android:layout_marginStart="8dp"/>
    <EditText android:textSize="16sp" android:textColor="?android:attr/textColorSecondary" android:textColorHint="?android:attr/textColorHint" android:id="@+id/search_view" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp" android:hint="@string/dialer_hint_find_contact" android:maxLines="1" android:layout_centerVertical="true" android:inputType="textFilter" android:imeOptions="flagNoExtractUi" android:textCursorDrawable="@drawable/custom_cursor" android:layout_marginStart="8dp" android:layout_toStartOf="@+id/search_clear_button" android:layout_toEndOf="@+id/search_back_button"/>
    <ImageView android:id="@+id/search_clear_button" android:background="?attr/selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/quantum_ic_close_vd_theme_24" android:scaleType="center" android:tint="?attr/colorIcon" android:layout_centerVertical="true" android:contentDescription="@string/description_clear_search" android:layout_alignParentEnd="true"/>
</RelativeLayout>
