<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="?unknown_attr_ref: 10104e2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="64dp" android:layout_marginEnd="24dp">
    <TextView android:gravity="center" android:id="@+id/playback_state_text" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/Dialer.TextAppearance.Secondary"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="@dimen/voicemail_playback_top_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/playback_position_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:importantForAccessibility="no" style="@style/Dialer.TextAppearance.Secondary"/>
        <SeekBar android:id="@+id/playback_seek" android:layout_width="0dp" android:layout_height="wrap_content" android:max="0" android:progress="0" android:progressDrawable="@drawable/seekbar_drawable" android:thumb="@drawable/ic_voicemail_seek_handle" android:layout_weight="1" android:contentDescription="@string/description_playback_seek"/>
        <TextView android:id="@+id/total_duration_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:importantForAccessibility="no" style="@style/Dialer.TextAppearance.Secondary"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Space android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
        <ImageButton android:id="@+id/playback_speakerphone" android:src="@drawable/quantum_ic_volume_down_white_24" android:tint="?attr/colorIcon" android:contentDescription="@string/description_playback_speakerphone" style="@style/VoicemailPlaybackLayoutButtonStyle"/>
        <Space android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
        <ImageButton android:id="@+id/playback_start_stop" android:src="@drawable/ic_play_arrow" android:contentDescription="@string/voicemail_play_start_pause" style="@style/VoicemailPlaybackLayoutButtonStyle"/>
        <Space android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
        <ImageButton android:id="@+id/delete_voicemail" android:src="@drawable/quantum_ic_delete_white_24" android:tint="?attr/colorIcon" android:contentDescription="@string/call_log_trash_voicemail" style="@style/VoicemailPlaybackLayoutButtonStyle"/>
        <Space android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
