<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/search_box_expanded" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageButton android:id="@+id/search_back_button" android:background="?attr/selectableItemBackgroundBorderless" android:layout_width="@dimen/search_box_icon_size" android:layout_height="@dimen/search_box_icon_size" android:src="@drawable/back_arrow" android:tint="?attr/colorTextOnUnthemedDarkBackground" android:layout_centerVertical="true" android:contentDescription="@string/action_menu_back_from_search" android:layout_marginStart="16dp"/>
    <EditText android:textSize="@dimen/search_text_size" android:textColor="?android:attr/textColorPrimary" android:textColorHint="?android:attr/textColorHint" android:id="@+id/search_view" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1" android:layout_centerVertical="true" android:inputType="textFilter" android:imeOptions="flagNoExtractUi" android:textCursorDrawable="@drawable/searchedittext_custom_cursor" android:fontFamily="@string/search_font_family" android:layout_marginStart="8dp" android:layout_toStartOf="@+id/search_close_button" android:layout_toEndOf="@+id/search_back_button"/>
    <ImageView android:id="@+id/search_close_button" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/search_box_close_icon_padding" android:clickable="true" android:layout_width="@dimen/search_box_close_icon_size" android:layout_height="@dimen/search_box_close_icon_size" android:src="@drawable/quantum_ic_close_vd_theme_24" android:tint="?attr/colorIcon" android:layout_centerVertical="true" android:contentDescription="@string/description_clear_search" android:layout_alignParentEnd="true"/>
</RelativeLayout>
