<?xml version="1.0" encoding="utf-8"?>
<android.support.p002v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:cardElevation="2dp">
    <RelativeLayout android:paddingTop="16dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp">
        <ImageView android:id="@+id/permission_image" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/business_asset" android:layout_marginEnd="16dp"/>
        <TextView android:id="@+id/permission_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="40dp" android:text="@string/search_location_permission" android:lineSpacingMultiplier="1.2" android:layout_toEndOf="@+id/permission_image" style="@style/Dialer.TextAppearance.Primary"/>
        <Button android:id="@+id/location_permission_allow" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="52dp" android:layout_marginTop="18dp" android:text="@string/nearby_places_allow" android:layout_below="@+id/permission_text" android:layout_alignParentEnd="true"/>
        <Button android:textColor="?android:attr/colorPrimary" android:id="@+id/location_permission_dismiss" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="52dp" android:layout_marginTop="18dp" android:text="@string/nearby_places_dismiss" android:layout_below="@+id/permission_text" android:layout_marginEnd="8dp" android:layout_toStartOf="@+id/location_permission_allow" style="@style/Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>
</android.support.p002v7.widget.CardView>
